# pyPaperFlow

./: 1.text  39570595.json  README.md  README_zh.md  pyproject.toml
src/: Pubmed_Auto_Fetcher.py
src/pyPaperFlow/: cli.py  fetcher.py  query_builder.py  storage.py  utils.py
test/: searched_pmids.txt
test/alphafold3_ensemble/: 38995731.json  38996889.json  39186607.json  39574676.json  40490178.json  40549150.json  40714407.json  40938899.json  40950168.json  41014267.json  41047853.json  41147497.json  41249430.json  41432299.json  41478913.json  41502950.json
test/alphafold3_ensemble/2024/38995731/: 38995731.json
test/alphafold3_ensemble/2024/38996889/: 38996889.json
test/alphafold3_ensemble/2024/39186607/: 39186607.json
test/alphafold3_ensemble/2024/39574676/: 39574676.json
test/alphafold3_ensemble/2025/40490178/: 40490178.json
test/alphafold3_ensemble/2025/40549150/: 40549150.json
test/alphafold3_ensemble/2025/40714407/: 40714407.json
test/alphafold3_ensemble/2025/40938899/: 40938899.json
test/alphafold3_ensemble/2025/40950168/: 40950168.json
test/alphafold3_ensemble/2025/41249430/: 41249430.json
test/alphafold3_ensemble/2026/41014267/: 41014267.json
test/alphafold3_ensemble/2026/41047853/: 41047853.json
test/alphafold3_ensemble/2026/41147497/: 41147497.json
test/alphafold3_ensemble/2026/41432299/: 41432299.json
test/alphafold3_ensemble/2026/41478913/: 41478913.json
test/alphafold3_ensemble/2026/41502950/: 41502950.json
test/alphafold3_ensemble_try2/2024/38995731/: 38995731.json
test/alphafold3_ensemble_try2/2024/38996889/: 38996889.json
test/alphafold3_ensemble_try2/2024/39186607/: 39186607.json
test/alphafold3_ensemble_try2/2024/39574676/: 39574676.json
test/alphafold3_ensemble_try2/2025/40490178/: 40490178.json
test/full_text/2024/39570595/: 39570595.xml  (+2 more)
(+49 files in other folders)
