[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyPaperFlow"
version = "0.1.0"
# dynamic = ["version"]
description = "Automated paper fetching and analysis platform."
readme = "README.md"
requires-python = ">=3.13.5"
license = "MIT"
authors = [
    { name = "Joe Hoye Dow", email = "luxunisgod123@gmail.com" }
]

dependencies = [
  "biopython>=1.85",
  "typer>=0.20.0",
  "pandas>=2.3.1",
  "requests>=2.32.4",
  "bs4>=0.0.2",
  "lxml>=6.0.2",
  "pydantic>=2.12.5"
]

[project.scripts]
paperflow = "pyPaperFlow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyPaperFlow"]
